JCStress test and benchmarks and RegularJava subproject